[gd_scene load_steps=8 format=3 uid="uid://c83tqadluxxre"]

[ext_resource type="Script" path="res://Scripts/Building.gd" id="1_dkmvk"]
[ext_resource type="PackedScene" uid="uid://dn7b4eyrpgeb8" path="res://Toys/Robot.tscn" id="2_gmpcy"]
[ext_resource type="Texture2D" uid="uid://s15pmb2tbeai" path="res://textures/RobotCreator.tres" id="3_gb66r"]
[ext_resource type="FontFile" uid="uid://ddgpoaytrfj6u" path="res://Kodchasan-Regular.ttf" id="4_n5msk"]

[sub_resource type="Animation" id="Animation_bxlkl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w408g"]
resource_name = "pop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.279999, 0.279999), Vector2(0.8, 0.8), Vector2(0.775, 0.775)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -13), Vector2(0, -13), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yafwx"]
_data = {
"RESET": SubResource("Animation_bxlkl"),
"pop": SubResource("Animation_w408g")
}

[node name="BaseRobotCreator" type="Node2D"]
script = ExtResource("1_dkmvk")
cooldown = 4.0
prefab = ExtResource("2_gmpcy")
output_type = "robot"
line_offset = Vector2(0, 30)
cost = 500

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
texture_filter = 1
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_gb66r")

[node name="NameLabel" type="Label" parent="Sprite2D"]
offset_left = -51.8182
offset_top = -113.636
offset_right = 91.1818
offset_bottom = -90.6364
theme_override_fonts/font = ExtResource("4_n5msk")
text = "Robot Generator"

[node name="LinkVisual" type="Line2D" parent="."]
z_index = -20
z_as_relative = false
width = 40.0
default_color = Color(0.108046, 0.121946, 0.162346, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ConveyorContainer" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yafwx")
}
